--- a/nodejs/packages/layer/package.json
+++ b/nodejs/packages/layer/package.json
@@ -48,6 +48,7 @@
     "@opentelemetry/propagator-aws-xray": "^1.2.0",
     "@opentelemetry/resource-detector-aws": "^1.2.2",
     "@opentelemetry/resources": "^1.11.0",
+    "@opentelemetry/sdk-metrics": "^1.11.0",
     "@opentelemetry/sdk-trace-base": "^1.11.0",
     "@opentelemetry/sdk-trace-node": "^1.11.0"
   }
