--- a/.github/workflows/layer-publish.yml
+++ b/.github/workflows/layer-publish.yml
@@ -4,23 +4,23 @@ on:
   workflow_call:
     inputs:
       artifact-name:
-        description: 'This should correspond to a actions/upload-artifact name earlier in the build.'
+        description: "This should correspond to a actions/upload-artifact name earlier in the build."
         required: true
         type: string
       layer-name:
-        description: 'Layer name not including other parts like arch or version.'
+        description: "Layer name not including other parts like arch or version."
         required: true
         type: string
       component-version:
-        description: 'Version of the component included in this release. Not the same as the layer/tagged version.'
+        description: "Version of the component included in this release. Not the same as the layer/tagged version."
         required: true
         type: string
       architecture:
-        description: '(optional) amd64 or arm64'
+        description: "(optional) amd64 or arm64"
         required: false
         type: string
       runtimes:
-        description: '(optional) a space delimited list of compatible runtimes (from https://docs.aws.amazon.com/lambda/latest/dg/lambda-runtimes.html)'
+        description: "(optional) a space delimited list of compatible runtimes (from https://docs.aws.amazon.com/lambda/latest/dg/lambda-runtimes.html)"
         required: false
         type: string
       release-group:
@@ -29,10 +29,9 @@ on:
         default: dev
         type: string
       aws_region:
-        description: 'Publish to which AWS region?'
+        description: "Publish to which AWS region?"
         required: true
         type: string
-
 
 permissions:
   id-token: write
@@ -43,12 +42,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Construct Layer Name
         shell: bash
         run: |
           LAYER_NAME=${{ inputs.layer-name }}
-          
+
           if [[ -n "${{ inputs.architecture }}" ]]; then
             LAYER_NAME=$LAYER_NAME-${{ inputs.architecture }}
             ARCH=$(echo "${{ inputs.architecture }}" | sed -r 's/amd64/x86_64/g')
@@ -56,22 +54,22 @@ jobs:
             ARCH="x86_64 arm64"
           fi
           echo "ARCH=$ARCH" >> $GITHUB_ENV
-          
+
           if [[ -n "${{ inputs.runtimes }}" ]]; then
             RUNTIMES="--compatible-runtimes ${{ inputs.runtimes }}"
           fi
           echo "RUNTIMES=$RUNTIMES" >> $GITHUB_ENV
-          
+
           if [[ "${{ inputs.release-group }}" != "prod" ]]; then
             LAYER_NAME=$LAYER_NAME-${{ inputs.release-group }}
           fi
-          
+
           LAYER_VERSION=$(echo "$GITHUB_REF_NAME" | sed -r 's/.*\/[^0-9\.]*//g')
           LAYER_VERSION_CLEANED=$(echo "$LAYER_VERSION" | sed -r 's/\./_/g')
-          
+
           LAYER_NAME=$LAYER_NAME-$LAYER_VERSION_CLEANED
           echo "LAYER_NAME=$LAYER_NAME" >> $GITHUB_ENV
-          
+
           echo GITHUB_ENV:
           cat $GITHUB_ENV
 
@@ -90,13 +88,13 @@ jobs:
 
       - name: Publish Lambda Layer
         run: |
-          ls -l
+          pwd
           LAYER_ARN=$(
             aws lambda publish-layer-version \
               --layer-name $LAYER_NAME \
               --license-info "Apache 2.0" \
               --compatible-architectures $ARCH $RUNTIMES \
-              --zip-file fileb://${{ inputs.artifact-name }} \
+              --zip-file fileb://opentelemetry-lambda/${{ inputs.artifact-name }} \
               --query 'LayerVersionArn' \
               --output text
           )
