--- a/.github/workflows/release-layer-collector.yml
+++ b/.github/workflows/release-layer-collector.yml
@@ -27,6 +27,8 @@ jobs:
           go-version: "^1.20.8"
       - name: build
         run: make -C collector package GOARCH=${{ matrix.architecture }}
+      - name: list files
+        run: ls -l ${{ github.workspace }}/collector/build/
       - uses: actions/upload-artifact@v4
         with:
           name: opentelemetry-collector-layer-${{ matrix.architecture }}.zip
