--- a/nodejs/packages/layer/package.json
+++ b/nodejs/packages/layer/package.json
@@ -9,9 +9,13 @@
     "lint": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .ts",
     "lint:fix": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .ts --fix",
     "build": "npm run clean && npm run compile && npm run postcompile",
+    "copy-esm-files": "copyfiles 'src/**/*.mjs' build && copyfiles 'test/**/*.mjs' build",
     "compile": "tsc -p .",
-    "postcompile": "copyfiles 'package*.json' build/workspace/nodejs && npm install --production --ignore-scripts --prefix build/workspace/nodejs && rm build/workspace/nodejs/package.json build/workspace/nodejs/package-lock.json && copyfiles -f 'scripts/*' build/workspace && copyfiles -f 'build/src/*' build/workspace && cd build/workspace && bestzip ../layer.zip *",
-    "test": "mocha"
+    "postcompile": "npm run copy-esm-files && copyfiles 'package*.json' build/workspace/nodejs && npm install --production --ignore-scripts --prefix build/workspace/nodejs && rm build/workspace/nodejs/package.json build/workspace/nodejs/package-lock.json && copyfiles -f 'scripts/*' build/workspace && copyfiles -f 'build/src/*' build/workspace && cd build/workspace && bestzip ../layer.zip *",
+    "pretest": "npm run compile",
+    "test:cjs": "mocha 'test/**/*.spec.ts' --exclude 'test/**/*.spec.mjs' --timeout 10000",
+    "test:esm": "mocha 'test/**/*.spec.mjs' --exclude 'test/**/*.spec.ts' --timeout 10000",
+    "test": "npm run test:cjs && npm run test:esm"
   },
   "keywords": [
     "opentelemetry",
@@ -28,21 +32,21 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/api-logs": "^0.54.0",
-    "@opentelemetry/exporter-logs-otlp-proto": "^0.54.0",
+    "@opentelemetry/api-logs": "^0.54.2",
+    "@opentelemetry/exporter-logs-otlp-proto": "^0.54.2",
     "@opentelemetry/auto-configuration-propagators": "^0.3.1",
     "@opentelemetry/core": "^1.27.0",
-    "@opentelemetry/exporter-metrics-otlp-proto": "^0.54.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.54.0",
-    "@opentelemetry/instrumentation": "^0.54.0",
-    "@opentelemetry/instrumentation-aws-lambda": "^0.46.0",
-    "@opentelemetry/instrumentation-aws-sdk": "^0.45.0",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.54.2",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.54.2",
+    "@opentelemetry/instrumentation": "^0.54.2",
+    "@opentelemetry/instrumentation-aws-lambda": "^0.47.0",
+    "@opentelemetry/instrumentation-aws-sdk": "^0.46.0",
     "@opentelemetry/instrumentation-dns": "^0.40.0",
     "@opentelemetry/instrumentation-express": "^0.44.0",
     "@opentelemetry/instrumentation-graphql": "^0.44.0",
-    "@opentelemetry/instrumentation-grpc": "^0.54.0",
+    "@opentelemetry/instrumentation-grpc": "^0.54.2",
     "@opentelemetry/instrumentation-hapi": "^0.42.0",
-    "@opentelemetry/instrumentation-http": "^0.54.0",
+    "@opentelemetry/instrumentation-http": "^0.54.2",
     "@opentelemetry/instrumentation-ioredis": "^0.44.0",
     "@opentelemetry/instrumentation-koa": "^0.44.0",
     "@opentelemetry/instrumentation-mongodb": "^0.48.0",
@@ -53,7 +57,7 @@
     "@opentelemetry/propagator-aws-xray": "^1.26.0",
     "@opentelemetry/resource-detector-aws": "^1.7.0",
     "@opentelemetry/resources": "^1.27.0",
-    "@opentelemetry/sdk-logs": "^0.54.0",
+    "@opentelemetry/sdk-logs": "^0.54.2",
     "@opentelemetry/sdk-metrics": "^1.27.0",
     "@opentelemetry/sdk-trace-base": "^1.27.0",
     "@opentelemetry/sdk-trace-node": "^1.27.0"
