--- a/nodejs/sample-apps/aws-sdk/package.json
+++ b/nodejs/sample-apps/aws-sdk/package.json
@@ -8,8 +8,8 @@
   "repository": "open-telemetry/opentelemetry-lambda",
   "scripts": {
     "clean": "rimraf build/*",
-    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .ts",
-    "lint:fix": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .ts --fix",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "build": "npm run clean && npm run compile && npm run postcompile",
     "compile": "tsc -p .",
     "postcompile": "copyfiles 'package*.json' build/src/ && npm install --production --ignore-scripts --prefix build/src/ && cd build/src && bestzip ../function.zip *"
@@ -25,25 +25,22 @@
   "author": "OpenTelemetry Authors",
   "license": "Apache-2.0",
   "engines": {
-    "node": ">=16.0.0"
-  },
-  "files": [
-    "build/src/**/*.js",
-    "build/src/**/*.d.ts",
-    "doc",
-    "LICENSE",
-    "README.md"
-  ],
-  "devDependencies": {
-    "@types/aws-lambda": "8.10.149",
-    "@types/node": "22.15.21",
-    "bestzip": "2.2.1",
-    "copyfiles": "2.4.1",
-    "rimraf": "6.0.1",
-    "ts-node": "10.9.2",
-    "typescript": "5.8.3"
+    "node": ">=18.0.0"
   },
   "dependencies": {
+    "@aws-sdk/client-sts": "^3.821.0",
     "aws-sdk": "2.1692.0"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.149",
+    "@types/node": "^22.15.29",
+    "aws-cdk": "^2.1017.1",
+    "aws-cdk-lib": "^2.199.0",
+    "bestzip": "^2.2.1",
+    "constructs": "^10.4.2",
+    "copyfiles": "^2.4.1",
+    "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
