--- a/nodejs/sample-apps/aws-sdk/package.json
+++ b/nodejs/sample-apps/aws-sdk/package.json
@@ -38,6 +38,7 @@
     "@aws-sdk/client-sts": "^3.826.0",
     "@types/aws-lambda": "8.10.150",
     "@types/node": "24.0.3",
+    "aws-cdk-lib": "^2.201.0",
     "bestzip": "2.2.1",
     "copyfiles": "2.4.1",
     "rimraf": "6.0.1",
